feat: create sidebar itens

--- a/moneyMine/src/app/components/side-bar/side-bar.component.html
+++ b/moneyMine/src/app/components/side-bar/side-bar.component.html
@@ -1,1 +1,25 @@
-<p>side-bar works!</p>
+<div class="sideBar">
+  <div>
+    <p id="side-title">MoneyMine</p>
+  </div>
+  <div class="side-item">
+    <img src="../../../assets/Icon-home.png" alt="home image"/>
+    <span class="side-text">Dashboard</span>
+  </div>
+  <div class="side-item">
+    <img src="../../../assets/Icon-reply.png" alt="home image"/>
+    <span class="side-text">Transfer</span>
+  </div>
+  <div class="side-item">
+    <img src="../../../assets/Icon-euro-sign.png" alt="home image"/>
+    <span class="side-text">Transactions</span>
+  </div>
+  <div class="side-item">
+    <img src="../../../assets/Icon-credit-card.png" alt="home image"/>
+    <span class="side-text">Accounts</span>
+  </div>
+  <div class="side-item">
+    <img src="../../../assets/Icon-chart-line.png" alt="home image"/>
+    <span class="side-text">Investments</span>
+  </div>  
+</div>
